WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237673
IndexedDB: free memory used by database connection on low-memory warning
https://bugs.webkit.org/show_bug.cgi?id=237673
Summary
IndexedDB: free memory used by database connection on low-memory warning
Sihui Liu
Reported
2022-03-09 12:59:19 PST
...
Attachments
Patch
(8.35 KB, patch)
2022-03-09 13:00 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2022-03-09 13:00:57 PST
Created
attachment 454277
[details]
Patch
Chris Dumez
Comment 2
2022-03-10 07:30:49 PST
Comment on
attachment 454277
[details]
Patch r=me
EWS
Comment 3
2022-03-10 10:00:22 PST
Committed
r291117
(?): <
https://commits.webkit.org/r291117
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 454277
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-03-10 10:01:20 PST
<
rdar://problem/90105335
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug