IndexedDB: free memory used by database connection on low-memory warning https://bugs.webkit.org/show_bug.cgi?id=237673

Reviewed by Chris Dumez.

Source/WebCore:

* Modules/indexeddb/server/IDBBackingStore.h:
* Modules/indexeddb/server/MemoryIDBBackingStore.h:
* Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::SQLiteIDBBackingStore::handleLowMemoryWarning):
* Modules/indexeddb/server/SQLiteIDBBackingStore.h:
* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::handleLowMemoryWarning):
* Modules/indexeddb/server/UniqueIDBDatabase.h:

Source/WebKit:

* NetworkProcess/storage/IDBStorageManager.cpp:
(WebKit::IDBStorageManager::handleLowMemoryWarning):
* NetworkProcess/storage/IDBStorageManager.h:
* NetworkProcess/storage/NetworkStorageManager.cpp:
(WebKit::NetworkStorageManager::handleLowMemoryWarning):



Canonical link: https://commits.webkit.org/248279@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291117 268f45cc-cd09-0410-ab3c-d52691b4dbfc